--- a/src/views/logPage.html
+++ b/src/views/logPage.html
@@ -12,7 +12,7 @@
                 headers: {  
                 "Content-type": "application/x-www-form-urlencoded; charset=UTF-8"  
                 },    
-                body: 'login=admin&password=admin228'  })
+                body: 'login=admin1&password=admin228'  })
             }
             function sendout(){
                 fetch("/login",{
@@ -20,7 +20,7 @@
                 headers: {  
                 "Content-type": "application/x-www-form-urlencoded; charset=UTF-8"  
                 },    
-                body: 'login=admin&password=admin228'  })
+                body: 'login=admin1&password=admin228'  })
             }
             
         </script>
