--- a/src/views/regPage.html
+++ b/src/views/regPage.html
@@ -11,7 +11,7 @@
                 headers: {  
                 "Content-type": "application/x-www-form-urlencoded; charset=UTF-8"  
                 },  
-                body: 'login=admin&password=admin228'  })
+                body: 'login=admin1&password=admin228'  })
             }
         </script>
     </body>
