--- a/src/views/logUser.html
+++ b/src/views/logUser.html
@@ -15,20 +15,20 @@
         <h2>{{account}}</h2>
         <script>
             function send(){
-                fetch("/loginstakeholder",{
+                fetch("/loginUser",{
                 method: 'post',  
                 headers: {  
                 "Content-type": "application/x-www-form-urlencoded; charset=UTF-8"  
                 },    
-                body: 'login=admin121&password=admin2281'  })
+                body: 'login=admin11&password=admin2281'  })
             }
             function sendout(){
-                fetch("/loginstakeholder/logout",{
+                fetch("/logoutUser",{
                 method: 'delete',  
                 headers: {  
                 "Content-type": "application/x-www-form-urlencoded; charset=UTF-8"  
                 },    
-                body: 'login=admin121&password=admin2281'  })
+                body: 'login=admin11&password=admin2281'  })
             }
             
         </script>
