--- a/src/views/regUser.html
+++ b/src/views/regUser.html
@@ -6,12 +6,12 @@
         <button onclick="send()">send</button>
         <script>
             function send(){
-                fetch("/registrationstakeholder",{
+                fetch("/registrationUser",{
                 method: 'post',  
                 headers: {  
                 "Content-type": "application/x-www-form-urlencoded; charset=UTF-8"  
                 },  
-                body: 'login=admin121&password=admin2281'  })
+                body: 'login=admin11&password=admin2281'  })
             }
         </script>
     </body>
