--- a/src/views/CreateSurvey.html
+++ b/src/views/CreateSurvey.html
@@ -22,8 +22,14 @@
         кол-во полей в анкете: <input type="text" class="number"> (максимум 40)
     </div>
     <br>
+    <div class="container">
+      введите дату начала опроса: <input type="date" class="first_date"> 
+      введите дату завершения опроса: <input type="date" class="last_date">
+    </div>
+    <br>
     <div class="container main"></div>
     <button >создать</button>
+    <div class="container result"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
