--- a/src/views/reportPageItem.html
+++ b/src/views/reportPageItem.html
@@ -2,6 +2,7 @@
         <!-- Для шапки и футера однозначно нужен темплейт -->
 {% block content %}
 <h4>{{ parametr }}</h4>
+<h5><a href={{ download_url }}> скачать</a></h5>
 <div class="container-fluid">
         <div class="row">
     
