--- a/src/views/logPageAdmin.html
+++ b/src/views/logPageAdmin.html
@@ -15,7 +15,7 @@
         <h2>{{account}}</h2>
         <script>
             function send(){
-                fetch("/login",{
+                fetch("/logadmin",{
                 method: 'post',  
                 headers: {  
                 "Content-type": "application/x-www-form-urlencoded; charset=UTF-8"  
@@ -23,7 +23,7 @@
                 body: 'login=admin&password=123321'  })
             }
             function sendout(){
-                fetch("/login",{
+                fetch("/logadmin",{
                 method: 'delete',  
                 headers: {  
                 "Content-type": "application/x-www-form-urlencoded; charset=UTF-8"  
