--- a/src/views/CreateSurvey.html
+++ b/src/views/CreateSurvey.html
@@ -22,6 +22,8 @@
         кол-во полей в анкете: <input type="text" class="number"> (максимум 40)
     </div>
     <br>
+    <div class="container"> описание к опросу: <input type="text" class="description">  </div>
+    <br>
     <div class="container">
       введите дату начала опроса: <input type="date" class="first_date"> 
       введите дату завершения опроса: <input type="date" class="last_date">
