--- a/src/views/AllSurvey.html
+++ b/src/views/AllSurvey.html
@@ -14,7 +14,7 @@
     <div class="container name">
         <h1>Доступные опросы:</h1>
             {% for name in mas_name %}
-            <a href={{'name'+name}}>{{name}}</a>
+            <a href={{'name'+name}}>{{name}} ({{mas_desc.shift()}})</a>
             <br>
             {% endfor %}
 
