--- a/src/css/surveyforadmin.css
+++ b/src/css/surveyforadmin.css
@@ -1,3 +1,23 @@
-table{
-    color: red
-}
+table {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 14px;
+    border-collapse: collapse;
+    text-align: center;
+    }
+td:first-child {
+    background: #AFCDE7;
+    color: white;
+    padding: 10px 20px;
+    }
+td {
+    border-style: solid;
+    border-width: 0 1px 1px 0;
+    border-color: white;
+    }
+td {
+    background: #D8E6F3;
+    }
+h1{
+        text-align: center;
+    }
+   
