--- a/src/views/templates/pageTemplate.html
+++ b/src/views/templates/pageTemplate.html
@@ -45,7 +45,7 @@
 {% endblock %}
 {% block menu %}
 <nav class="nav nav-pills nav-fill center-block">
-        <a class="nav-link" href="/publicref">Публичные отчеты</a>
+        <a class="nav-link" href="/publicreport">Публичные отчеты</a>
         <a class="nav-link" href="/publicquiz">Публичные опросы</a>
         <a class="nav-link" href="/events">Мероприятия и материалы</a>
         <a class="nav-link" href="/personsmap">Карта заинтересованных сторон</a>
