--- a/src/views/newReport.html
+++ b/src/views/newReport.html
@@ -10,12 +10,12 @@
         <textarea class="form-control" id="reportDescription" name="description" rows="4"></textarea>
     </div>
     <div class="form-group">
-        <label for="imgReport">Загрузите картинку</label>
-        <input type="file" class="form-control-file" id="imgReport" >
+        <label for="pdfReport">Загрузите pdf отчета</label>
+        <input type="file" accept="application/pdf" class="form-control-file" id="pdfReport" name="pdf">
     </div>
     <div class="form-group">
-        <label for="pdfReport">Загрузите pdf отчета</label>
-        <input type="file" class="form-control-file" id="pdfReport" name="pdf">
+        <label for="imgReport">Загрузите обложку отчета</label>
+        <input type="file" accept="image/jpeg,image/png" class="form-control-file" id="imgReport" name="img">
     </div>
     <button type="submit"  class="btn btn-primary">Submit</button>
   </form>
