--- a/src/views/reportPageItem.html
+++ b/src/views/reportPageItem.html
@@ -1,18 +1,13 @@
 {% extends "templates/pageTemplate.html" %}
         <!-- Для шапки и футера однозначно нужен темплейт -->
 {% block content %}
-<a href="/publicreport"><button type="button" class="btn btn-secondary btn-lg"><span class="glyphicon glyphicon-arrow-left"></span> назад</button></a>
-<h4 class="text-center">{{ parametr.name }}</h4>
-<h5>{{parametr.description}}</h5>
+<h4>{{ parametr }}</h4>
+<h5><a href={{ download_url }}> скачать</a></h5>
 <div class="container-fluid">
         <div class="row">
-                <div class="embed-responsive embed-responsive-16by9">
-                        <embed class="embed-responsive-item"  src={{ download_url }} />
-                </div>
-
+    
         </div>
 </div>
-<h5><a href={{ download_url }}> скачать pdf отчета</a></h5>
 
 <!-- <div class=" container">
         <h1 class="text-center">{{ paramebn }}</h1>
