--- a/src/views/Survey.html
+++ b/src/views/Survey.html
@@ -28,6 +28,9 @@
         </span>
         </div>
       {% endfor %}
+      <br>
+      <div class="container annotation">аннотация: {{annotation}} <a href={{ file }}> скачать файл</a></div>
+      <br>
       <button class="send">отправить</button>
       <div class="container result"></div>
 
