--- a/src/views/SurveyForAdmin.html
+++ b/src/views/SurveyForAdmin.html
@@ -29,6 +29,11 @@
             </tr>
             {% endfor %}
         </table>
+        <br>
+        <form  method="POST" enctype="multipart/form-data">
+            <p>прикрепить файл: <input name="file_an" type="file"> добавить аннотацию: <input type="text" name="text_an" ></p>
+            <p><input type="submit"></p>
+           </form>
 
     </div>
 
