--- a/src/views/SurveyForAdmin.html
+++ b/src/views/SurveyForAdmin.html
@@ -34,6 +34,7 @@
             <p>прикрепить файл: <input name="file_an" type="file"> добавить аннотацию: <input type="text" name="text_an" ></p>
             <p><input type="submit"></p>
            </form>
+           <div class="container res">{{response}}</div>
 
     </div>
 
