--- a/src/views/fileNegotiationForAdmin.html
+++ b/src/views/fileNegotiationForAdmin.html
@@ -17,7 +17,7 @@
           <p><a href={{ file }}>скачать файл</a></p>
           <p>Участники: 
               {% for item in access %}
-              <a href={{'name'+name+'/'+item}}>{{item}}</a> , 
+              <a href={{item}}>{{item}}</a> , 
               {% endfor %}
           </p>
           <p>Согласовали: {{agreement}}</p>
@@ -26,8 +26,10 @@
       <div class="container update">
         <form  method="POST" enctype="multipart/form-data">
           <p>Обновить файл: <input name="file" type="file"></p>
-          <p>Добавить комментарий: <input type="text" name="comment"></p>
           <p><input type="submit"></p>
+        </form>
+        <form method="POST" action="back">
+            <p><input type="submit" value="назад к списку"></p>
         </form>
       </div>
       <div class="container result">{{response}}</div>
