--- a/src/views/fileNegotiationShowAll.html
+++ b/src/views/fileNegotiationShowAll.html
@@ -10,27 +10,29 @@
     <title></title>
   </head>
   <body>
-
+        {% for item in mas %}
       <div class="container main">
-          <h1>{{name}}</h1>
-          <h3>{{description}}</h3>
-          <p><a href={{ file }}>скачать файл</a></p>
-          <p>Комментарий админа: {{comment}} </p>
+          <h1>{{item.name}}</h1>
+          <h3>{{item.description}}</h3>
+          <p><a href={{ '/file/'+item.file }}>скачать файл</a></p>
           <p>Диалог с админом: <br>
-              {% for d in dialog %}
-              {{d.log}}: {{d.com}} <br>
-              {% endfor %}
+            {% for d in item.account %}
+            {{d.sender}}: {{d.text}} <br>
+            {% endfor %}
           </p>
       </div>
       <br>
       <div class="container update">
-        <form  method="POST" enctype="multipart/form-data">
-          <p>Обновить файл: <input name="file" type="file"></p>
-          <p>Добавить комментарий: <input type="text" name="comment"></p>
+        <form  method="POST" action={{'/fileNegotiation/all/msg'+item.name}}>
+          <p><input type="text" name="dialog"></p>
           <p><input type="submit"></p>
         </form>
+        <form  method="POST" action={{'/fileNegotiation/all/agr'+item.name}}>
+            <p><input type="submit" value="согласие"></p>
+          </form>
       </div>
       <div class="container result">{{response}}</div>
+      {% endfor %}
       
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
