--- a/src/views/Survey.html
+++ b/src/views/Survey.html
@@ -13,6 +13,7 @@
   <body>
         <div class="container name">{{name}}</div>
         <div class="container description">({{description}})</div>
+        {% if question %}
         {% for item in answer %}
         <div class="container">
         <span class="question">{{question.shift()}}</span>
@@ -28,10 +29,15 @@
         </span>
         </div>
       {% endfor %}
+      {% endif %}
       <br>
+      {% if (annotation  or file) %}
       <div class="container annotation">аннотация: {{annotation}} <a href={{ file }}> скачать файл</a></div>
+      {% endif %}
       <br>
+      {% if question %}
       <button class="send">отправить</button>
+      {% endif %}
       <div class="container result"></div>
 
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
