--- a/src/views/templates/pageTemplate.html
+++ b/src/views/templates/pageTemplate.html
@@ -36,8 +36,8 @@
         
       </ul>
       <form action="/search" method="POST" class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
+        <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search" name="search">
+        <input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="поиск">
       </form>
     </div>
   </nav>
