--- a/src/views/fileNegotiationForAdmin.html
+++ b/src/views/fileNegotiationForAdmin.html
@@ -14,6 +14,7 @@
       <div class="container main">
           <h1>{{name}}</h1>
           <h3>{{description}}</h3>
+          <h4>{{firstDate}} - {{lastDate}}</h4>
           <p><a href={{ file }}>скачать файл</a></p>
           <p>Участники: 
               {% for item in access %}
