--- a/src/views/fileNegotiationForAdminDialog.html
+++ b/src/views/fileNegotiationForAdminDialog.html
@@ -14,6 +14,7 @@
       <div class="container main">
           <h1>{{name}}</h1>
           <h3>{{description}}</h3>
+          <h4>{{firstDate}} - {{lastDate}}</h4>
           <p>
               
               Диалог:<br>
