--- a/src/views/regFileNegotiationForAdmin.html
+++ b/src/views/regFileNegotiationForAdmin.html
@@ -14,7 +14,9 @@
       <div class="container main">
       <form  method="POST" enctype="multipart/form-data">
         <p>Введите название: <input type="text" name="name"> введите описание: <input type="text" name="description"> </p>
-        <p>Прикрепить файл: <input name="file" type="file"> добавить комментарий: <input type="text" name="comment"> </p>
+        <p>введите дату начала: <input type="date" name="firstDate"> 
+          введите дату завершения: <input type="date" name="lastDate"></p>
+        <p>Прикрепить файл: <input name="file" type="file">  </p>
         <p>Stakeholders list:<br>
             {% for st in stakeholders %}
             <label><input type="checkbox" name='access' value={{st.login}} /> {{st.login}}</label><br>
