--- a/src/views/lk.html
+++ b/src/views/lk.html
@@ -17,11 +17,13 @@
         <div class="card-body">
           <h5 class="card-title">{{sh.organization}}</h5>
           <p class="card-text">{{sh.contactInformation}}</p>
-          <a href="/lk/{{sh._id}}?agree=2" class="btn btn-primary">Принять</a>
-          <a href="/lk/{{sh._id}}?agree=3" class="btn btn-primary">Отказать</a>
+          <a href="/lk/confirm/{{sh._id}}?agree=2" class="btn btn-primary">Принять</a>
+          <a href="/lk/confirm/{{sh._id}}?agree=3" class="btn btn-primary">Отказать</a>
         </div>
 </div> 
+
 {% endfor %}
+<a href="/lk/csv/" class="btn btn-primary">скачать csv о стейхолдерах</a>
  {% endif %}
 <!-- <div class=" container">
         <h1 class="text-center">{{ paramebn }}</h1>
