--- a/src/views/newReport.html
+++ b/src/views/newReport.html
@@ -10,8 +10,20 @@
         <textarea class="form-control" id="reportDescription" name="description" rows="4"></textarea>
     </div>
     <div class="form-group">
+        <label for="reportStandarts">Стандарты</label>
+        <input type="text" class="form-control" id="reportStandarts" name="standarts" placeholder="Введите по каким стандартам выполнен отчет">
+    </div>
+    <div class="form-group">
+        <label for="reportRevards">Награды отчета</label>
+        <input type="text" class="form-control" id="reportRevards" name="revards" placeholder="Введите награды отчета">
+    </div>
+    <div class="form-group">
         <label for="pdfReport">Загрузите pdf отчета</label>
         <input type="file" accept="application/pdf" class="form-control-file" id="pdfReport" name="pdf">
+    </div>
+    <div class="form-group">
+        <label for="pdfReportEng">Загрузите pdf отчета</label>
+        <input type="file" accept="application/pdf" class="form-control-file" id="pdfReportEng" name="pdfEng">
     </div>
     <div class="form-group">
         <label for="imgReport">Загрузите обложку отчета</label>
