--- a/src/views/reportPageupdate.html
+++ b/src/views/reportPageupdate.html
@@ -1,23 +1,35 @@
 {% extends "templates/pageTemplate.html" %}
 {% block content %}
-<form  method="POST" enctype="multipart/form-data">
     <div class="form-group">
         Название отчета: {{name}}
     </div>
-    <div class="form-group">
-        <label for="reportDescription">Описание отчета</label>
-        <textarea class="form-control" id="reportDescription" name="description" rows="4"></textarea>
-    </div>
-    <div class="form-group">
-        <label for="imgReport">Загрузите картинку</label>
-        <input type="file" class="form-control-file" id="imgReport" >
-    </div>
-    <div class="form-group">
-        <label for="pdfReport">Загрузите pdf отчета</label>
-        <input type="file" class="form-control-file" id="pdfReport" name="pdf">
-    </div>
-    <button type="submit"  class="btn btn-primary">Submit</button>
-  </form>
+    <form  method="POST" enctype="multipart/form-data">
+        <div class="form-group">
+            <label for="reportDescription">Описание отчета</label>
+            <textarea class="form-control" id="reportDescription" name="description" rows="4"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="reportStandarts">Стандарты</label>
+            <input type="text" class="form-control" id="reportStandarts" name="standarts" placeholder="Введите по каким стандартам выполнен отчет">
+        </div>
+        <div class="form-group">
+            <label for="reportRevards">Награды отчета</label>
+            <input type="text" class="form-control" id="reportRevards" name="revards" placeholder="Введите награды отчета">
+        </div>
+        <div class="form-group">
+            <label for="pdfReport">Загрузите pdf отчета</label>
+            <input type="file" accept="application/pdf" class="form-control-file" id="pdfReport" name="pdf">
+        </div>
+        <div class="form-group">
+            <label for="pdfReportEng">Загрузите pdf отчета</label>
+            <input type="file" accept="application/pdf" class="form-control-file" id="pdfReportEng" name="pdfEng">
+        </div>
+        <div class="form-group">
+            <label for="imgReport">Загрузите обложку отчета</label>
+            <input type="file" accept="image/jpeg,image/png" class="form-control-file" id="imgReport" name="img">
+        </div>
+        <button type="submit"  class="btn btn-primary">Submit</button>
+      </form>
         <!-- <script>
             function send(){
                 
