--- a/src/views/lk.html
+++ b/src/views/lk.html
@@ -72,7 +72,7 @@
                                         </p>
 
                                         <div class="comments">
-                                                <h6>Комментарии</h6>
+                                                <h6 class="comments-title">Комментарии</h6>
 
                                                 <div class="field">
                                                         <div class="members">
@@ -94,13 +94,79 @@
                                                 </div>
 
                                                 <form>
-                                                        <input class="form-control" type="text" placeholder="Напишите сообщение и нажмите Enter">
+                                                        <input class="comment form-control" type="text" placeholder="Напишите сообщение и нажмите Enter">
+                                                </form>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="document row">
+                                <div class="col-12">
+                                        <div class="title">
+                                                <span class="name">Документ 1</span>
+                                                <div class="confirm form-check form-check-inline">
+                                                        <input class="confirm-input form-check-input" type="checkbox" id="confirm-doc" value="option1">
+                                                        <label class="confirm-text form-check-label" for="confirm-doc">Подтвердить документ</label>
+                                                </div>
+                                                <a class="download-pdf float-right" href="#">Скачать pdf</a>
+                                        </div>
+                                        
+                                        <p class="description">
+                                                Годовой отчет Группы компаний ASE - Инжинирингового дивизиона Госкорпорации «Росатом» за 2016 год
+                                        </p>
+
+                                        <div class="comments">
+                                                <h6 class="comments-title">Комментарии</h6>
+
+                                                <div class="field">
+                                                        <div class="members">
+                                                                <span class="sh">Стейкхолдер</span>
+                                                                <span class="admin float-right">Администратор</span>
+                                                        </div>
+                                                        <div class="comment left">
+                                                                <span class="text">
+                                                                        Отчет содержит неточности
+                                                                </span> 
+                                                                <span class="date">10.11.2018</span>
+                                                        </div>
+                                                        <div class="comment right">
+                                                                <span class="text">
+                                                                        Отчет содержит неточности
+                                                                </span> 
+                                                                <span class="date">10.11.2018</span>
+                                                        </div>
+                                                </div>
+
+                                                <form>
+                                                        <input class="comment form-control" type="text" placeholder="Напишите сообщение и нажмите Enter">
                                                 </form>
                                         </div>
                                 </div>
                         </div>
                 </div>
-                <div class="col right-delimiter left-delimiter "></div>
+                <div id="events" class="col right-delimiter left-delimiter">
+                        <div class="block-title">
+                                <img src="/img/lk/ring.png" alt="ring">
+                                Мероприятия
+                        </div>
+
+                        <div class="event row">
+                                <div class="col-12">
+                                        <div class="date">
+                                                <img src="/img/lk/calendar.png" alt="cal">
+                                                <span>18.12.2018</span>
+                                        </div>
+                                        
+                                        <p class="description">
+                                                Общественные консультации по проекту интегрированного отчета за 2017 год
+                                        </p>
+
+                                        <div class="accept-buttons">
+                                                <a class="accept" href="#">Подтвердить</a>
+                                                <a class="decline" href="#">Отказаться</a>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
                 <div class="col"></div>
         </div>
 </div>
